<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_bg"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.glydenet.jusspay.HomeFragment" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="left"
        android:padding="5dp" >

        <com.glydenet.jusspay.CircularImageView
            android:id="@+id/user_portrait_home"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/app_name"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/image" />

        <TextView
            android:id="@+id/text_name_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/user_portrait_home"
            android:layout_toRightOf="@+id/user_portrait_home"
            android:text="@string/text_name_home"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_phone_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_name_home"
            android:layout_toRightOf="@+id/user_portrait_home"
            android:layout_marginTop="16dp"
            android:text="@string/text_phone_home" />

        <TextView
            android:id="@+id/text_bal_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/user_portrait_home"
            android:layout_alignBottom="@+id/user_portrait_home"
            android:layout_alignLeft="@+id/text_phone_home"
            android:text="@string/text_bal_home" />

        <TextView
            android:id="@+id/text_bal_value_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/text_bal_home"
            android:layout_alignBottom="@+id/text_bal_home"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/text_bal_home"
            android:background="@drawable/green_textfield"
            android:hint="@string/hint_bal_home"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/text_bal_value_home"
            android:layout_marginTop="36dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button_add_credit_home"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_button_small"
                android:hint="@string/button_add_credit_home"
                android:text="@string/button_add_credit_home"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_send_home"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/blue_button_small"
                android:text="@string/button_send_home"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_recent_home"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_button_small"
                android:text="@string/button_recent_home"
                android:textColor="@color/white" />
        </LinearLayout>
    </RelativeLayout>

    <!--
  <com.glydenet.jusspay.CircularImageView
      android:id="@+id/row_icon"
      android:layout_width="90dp"
      android:layout_height="90dp"
      android:layout_marginTop="22dp"
      android:contentDescription="@string/app_name"
      android:padding="5dp"
      android:scaleType="fitCenter"
      android:src="@drawable/image" />
    -->

</LinearLayout>