<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_fragment_bg"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:src="@drawable/mail"
        android:contentDescription="@string/email_description" />

    <TextView
        android:id="@+id/texViewSignup_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="42dp"
        android:padding="20dp"
        android:text="@string/texViewSignup_confirm" />

    <Button
        android:id="@+id/btnSignup_openmail"
        style="@style/button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/green_button"
        android:drawableLeft="@drawable/ic_btn_login"
        android:drawablePadding="10sp"
        android:layout_below="@+id/texViewSignup_confirm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/btnSignup_openmail" />

    <View
        android:id="@+id/view1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnSignup_openmail"
        android:layout_marginTop="42dp"
        android:background="@color/light_gray" />

    <TextView
        android:id="@+id/text_signup_questions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnSignup_openmail"
        android:layout_below="@+id/view1"
        android:layout_marginTop="28dp"
        android:text="@string/text_signup_questions" />

</RelativeLayout>
