<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/login_fragment_bg"
    android:padding="8dp" >

    <TextView
        android:id="@+id/textView_portrait_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_portrait_profile"
        android:layout_margin="8dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp" >

        <ImageView
            android:id="@+id/imageView_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="18dp"
            android:src="@drawable/image" />

        <ProgressBar
            android:id="@+id/progressBar_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/imageView_profile"
            android:layout_alignTop="@+id/button_image_profile"
            android:layout_marginRight="23dp" />

        <Button
            android:id="@+id/button_image_profile"
            style="?android:attr/buttonStyleSmall"
            android:textColor="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="42dp"
            android:text="@string/button_image_profile"
            android:background="@drawable/green_button" />

    </RelativeLayout>
    <View
        android:id="@+id/line_separator_account"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="@color/light_gray" />

    <TextView
        android:id="@+id/textView_firstName_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_firstName_profile" />

    <EditText
        android:id="@+id/editText_firstName_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView_lastName_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_lastName_profile" />

    <EditText
        android:id="@+id/editText_lastName_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView_username_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_username_profile" />

    <EditText
        android:id="@+id/editText_username_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView_phone_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_phone_profile" />

    <EditText
        android:id="@+id/editText_phone_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_save_profile"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_save_profile"
            android:background="@drawable/green_button"
            android:textColor="#ffffff"
            android:drawableLeft="@drawable/ic_btn_save"
            android:drawablePadding="5sp" />

        <ProgressBar
            android:id="@+id/progressBar_profile2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>
