<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.glydenet.jusspay.MainActivity" >

    <Button
        android:id="@+id/btn_signup"
        style="@style/button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:background="@drawable/green_button"
        android:gravity="center"
        android:text="@string/btn_signup"
        android:width="185dp"
        android:onClick="displaySignup" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:layout_marginTop="164dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/welcome_text"
        android:textSize="14sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="187dp"
        android:layout_height="57dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/logo_long"
        android:gravity="center"
        android:scaleType="fitCenter"
        android:src="@drawable/logo_long" />

    <Button
        android:id="@+id/btn_login"
        style="@style/button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:background="@drawable/blue_button"
        android:gravity="center"
        android:text="@string/btn_login"
        android:width="185dp"
        android:onClick="displayLogin"
         />

</RelativeLayout>